--- a/recipes/pumpkin-pie.html
+++ b/recipes/pumpkin-pie.html
@@ -3,8 +3,7 @@
 <html lang="en">
     <meta charset="UTF-8>"
     <head>
-
-
+        <title>Pumpkin Pie Recipe</title>
     </head>
 <body>
     <h1>Pumpkin Pie</h1>
@@ -33,7 +32,6 @@
         <p>Pour the remaining pie filling into the pie shell. Dollop the chocolate pie filling on top. Use a toothpick or butter knife to create a marbled effect by swirling in and out of each of the dollops.</p>
         <li>Step 6</li>
         <p>Bake in the preheated oven for 15 minutes. Reduce heat to 350 degrees F (175 degrees C) and continue to bake until filling is set, 35 to 40 minutes.Remove from the oven, set on a wire rack, and cool completely before serving.</p>
-        
     </ol>
     </ul>
 </body>
