edited recipe-1 with basic css

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <meta charset="UTF-8"
+   
     <head>
-
-
+        <meta charset="UTF-8">
+        <title>Homepage</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/pumpkin-pie.html">Pumpkin Pie</a></li>
-            <li><a href="recipes/brownie.html">Super Easy and Super Tasty Brownies</a></li>
-            <li><a href="recipes/garlic-butter-shrimp.html">Garlic Butter Shrimp</a></li>
-        </ul>
-        
+        <div class="recipe-list">
+            <h1>My favorite food recipes</h1>
+            <img src="/images/foodie.webp" alt="foodie">
+            <ul>
+                <li><a href="recipes/recipe-1/brownie.html">Brownies</a></li>
+                <li><a href="recipes/recipe-2/garlic-butter-shrimp.html">Garlic Butter Shrimp</a></li>
+                <li><a href="recipes/recipe-3/pumpkin-pie.html">Pumpkin Pie</a></li>
+            </ul>
+        </div>
         
     </body>
 </html>
