--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Homepage</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./styles.css">
     </head>
 
     <body>
         <div class="recipe-list">
             <h1>My favorite food recipes</h1>
-            <img src="/images/foodie.webp" alt="foodie">
+            <img src="./images/foodie.webp" alt="foodie">
             <ul>
-                <li><a href="recipes/recipe-1/brownie.html">Brownies</a></li>
-                <li><a href="recipes/recipe-2/garlic-butter-shrimp.html">Garlic Butter Shrimp</a></li>
-                <li><a href="recipes/recipe-3/pumpkin-pie.html">Pumpkin Pie</a></li>
+                <li><a href="./recipes/recipe-1/brownie.html">Brownies</a></li>
+                <li><a href="./recipes/recipe-2/garlic-butter-shrimp.html">Garlic Butter Shrimp</a></li>
+                <li><a href="./recipes/recipe-3/pumpkin-pie.html">Pumpkin Pie</a></li>
             </ul>
         </div>
         
