--- a/recipes/recipe-1/brownie.html
+++ b/recipes/recipe-1/brownie.html
@@ -4,12 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Brownie Recipe</title>
-        <link rel="stylesheet" href="/recipes/recipe-1/styles.css">
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <h1>Quick and Easy Brownie</h1>
         <div class="Content">
-            <img src="/images/brownie.jpg">
+            <img src="../../images/brownie.jpg">
             <h3>A super easy recipe for the most tasty and chocolaty brownies!</h3>
             <h4>Ingredients:</h4>
             <ul>
@@ -33,7 +33,7 @@
                 <p>Bake in the preheated oven until top is dry and edges have started to pull away from the sides of the pan, about 20 to 30 minutes; cool before slicing into squares.</p>
                 <li>Step 4</li>
                 <p>What are you waiting for? Eaaatttt!!!</p>
-        <img src="/images/brownie-2.jpg">
+        <img src="../../images/brownie-2.jpg">
         </ol>
     
 
